[gd_scene load_steps=11 format=3 uid="uid://b26gg0460d4bt"]

[ext_resource type="Script" path="res://card.gd" id="1_14kf4"]
[ext_resource type="Texture2D" uid="uid://cecenf3fxx8u4" path="res://card_template.png" id="2_1th6v"]
[ext_resource type="Texture2D" uid="uid://wi6ux1wkq2t5" path="res://images/The Invention of ColorTV - 1938.jpg" id="2_4ion0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bq1j"]
size = Vector2(848, 1320)

[sub_resource type="LabelSettings" id="LabelSettings_neew7"]
font_size = 60
font_color = Color(0.0253638, 0.0253638, 0.0253638, 1)
outline_size = 7
outline_color = Color(0.560955, 0.560955, 0.560955, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0j04j"]
font_size = 55
font_color = Color(0.0923971, 0.0923971, 0.0923971, 1)

[sub_resource type="Animation" id="Animation_qxufn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2mvnx"]
resource_name = "hover_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_yx7qy"]
resource_name = "hover_out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cw6ny"]
_data = {
"RESET": SubResource("Animation_qxufn"),
"hover_in": SubResource("Animation_2mvnx"),
"hover_out": SubResource("Animation_yx7qy")
}

[node name="Card" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_14kf4")

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
position = Vector2(352, 512)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(88, 172)
shape = SubResource("RectangleShape2D_1bq1j")

[node name="Card_Image2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(64, 160)
scale = Vector2(0.71875, 0.5625)
texture = ExtResource("2_4ion0")
centered = false

[node name="Card_Template" type="Sprite2D" parent="."]
position = Vector2(416, 672)
scale = Vector2(0.896285, 1)
texture = ExtResource("2_1th6v")

[node name="Card_Description" type="Label" parent="Card_Template"]
anchors_preset = -1
anchor_right = 0.389061
anchor_bottom = 0.135355
offset_left = -408.073
offset_top = 160.0
offset_right = -17.0734
offset_bottom = 361.0
text = "Desription Test"
label_settings = SubResource("LabelSettings_neew7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Card_Date" type="Label" parent="Card_Template"]
visible = false
anchors_preset = -1
anchor_left = 0.00644113
anchor_top = 0.237375
anchor_right = 0.00644113
anchor_bottom = 0.291369
offset_left = 217.759
offset_top = 191.069
offset_right = 423.759
offset_bottom = 231.069
text = "9999"
label_settings = SubResource("LabelSettings_0j04j")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cw6ny")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
